⚰️ removed useless ping endpoint
